force-app/main/default/objects/ExceptionBase__c/ExceptionBase__c.object-meta.xml
<CustomObject>
    <label>ExceptionBase</label>
    <nameField>
        <label>ExceptionBase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExceptionsBase</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>