force-app/main/default/objects/ExceptionBase__c/fields/lineNumber__c.field-meta.xml
<CustomField>
    <fullName>lineNumber__c</fullName>
    <label>lineNumber</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>