force-app/main/default/objects/ExceptionBase__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <label>StackTrace</label>
    <length>200</length>
    <type>Text</type>
</CustomField>